--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="what_do_you_want_to_buy">What to buy?</string>
     <string name="enter_ful_name_your_location">Enter the full name of your location:</string>
     <string name="for_example_st_petersburg">For example, St. Petersburg</string>
+    <string name="location_not_selected">Location not selected</string>
 </resources>
