--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -10,4 +10,6 @@
     <string name="enter_ful_name_your_location">Введите полное название вашего местоположения:</string>
     <string name="for_example_st_petersburg">Например, Санкт-Петербург</string>
     <string name="location_not_selected">Местоположение не выбрано</string>
+    <string name="feels_like">ощущается как</string>
+    <string name="meters_per_second">м/с</string>
 </resources>
