Handled location search error

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -13,4 +13,5 @@
     <string name="feels_like">ощущается как</string>
     <string name="meters_per_second">м/с</string>
     <string name="failed_to_update_weather_data">Не удалось обновить погодные данные</string>
+    <string name="location_search_error">Ошибка при поиске местоположений</string>
 </resources>
