--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="feels_like">feels like</string>
     <string name="meters_per_second">m/s</string>
     <string name="failed_to_update_weather_data">Failed to update weather data</string>
+    <string name="location_search_error">Location search error</string>
 </resources>
