--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -19,4 +19,5 @@
     <string name="failed_to_clear_list">Не удалось очистить список. Повторите попытку позже</string>
     <string name="error">Ошибка</string>
     <string name="deleting_item_error">Ошибка при удалении элемента</string>
+    <string name="write_note">Напишите записк</string>
 </resources>
