Calendar date screen: created weather forecast view

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -20,4 +20,5 @@
     <string name="error">Ошибка</string>
     <string name="deleting_item_error">Ошибка при удалении элемента</string>
     <string name="write_note">Напишите записк</string>
+    <string name="failed_to_get_forecast">Не удалось получить прогноз погоды</string>
 </resources>
