--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,5 @@
     <string name="deleting_item_error">Deleting item error</string>
     <string name="write_note">Write a note</string>
     <string name="failed_to_get_forecast">Failed to get weather forecast</string>
+    <string name="add_note">Add note</string>
 </resources>
