--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -19,7 +19,7 @@
     <string name="failed_to_clear_list">Не удалось очистить список. Повторите попытку позже</string>
     <string name="error">Ошибка</string>
     <string name="deleting_item_error">Ошибка при удалении элемента</string>
-    <string name="write_note">Напишите записк</string>
     <string name="failed_to_get_forecast">Не удалось получить прогноз погоды</string>
     <string name="add_note">Добавить заметку</string>
+    <string name="write_a_note">Напишите заметку</string>
 </resources>
