--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,7 +19,7 @@
     <string name="failed_to_clear_list">Failed to clear the list. Try again later</string>
     <string name="error">Error</string>
     <string name="deleting_item_error">Deleting item error</string>
-    <string name="write_note">Write a note</string>
     <string name="failed_to_get_forecast">Failed to get weather forecast</string>
     <string name="add_note">Add note</string>
+    <string name="write_a_note">Write a note</string>
 </resources>
