--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,5 @@
     <string name="failed_to_get_forecast">Failed to get weather forecast</string>
     <string name="add_note">Add note</string>
     <string name="write_a_note">Write a note</string>
+    <string name="post_addresses">Post addresses</string>
 </resources>
