--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -23,4 +23,13 @@
     <string name="add_note">Добавить заметку</string>
     <string name="write_a_note">Напишите заметку</string>
     <string name="post_addresses">Почтовые адреса</string>
+    <string name="addressee_name">Имя адресата *</string>
+    <string name="street">Улица *</string>
+    <string name="building_number">Номер дома *</string>
+    <string name="apartment_number">Номер квартиры *</string>
+    <string name="postcode">Индекс *</string>
+    <string name="settlement">Населенный пункт *</string>
+    <string name="edge_region_optional">Край/область</string>
+    <string name="fields_marked_asterisk_required">Поля, отмеченные <b>*</b>, являются обязательными</string>
+    <string name="fill_all_necessary_fields">Заполните все необходимые поля</string>
 </resources>
