--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,15 +23,20 @@
     <string name="add_note">Add note</string>
     <string name="write_a_note">Write a note</string>
     <string name="post_addresses">Post addresses</string>
-    <string name="addressee_name">Addressee name *</string>
-    <string name="street">Street *</string>
-    <string name="building_number">Building number *</string>
+    <string name="addressee_name">Addressee name</string>
+    <string name="street">Street</string>
+    <string name="building_number">Building number</string>
     <string name="apartment_number">Apartment number</string>
-    <string name="postcode">Postcode *</string>
-    <string name="settlement">Settlement name *</string>
+    <string name="postcode">Postcode</string>
+    <string name="settlement">Settlement name</string>
     <string name="edge_region_optional">Edge/Region</string>
     <string name="fields_marked_asterisk_required">Fields marked with <b>*</b> are required</string>
     <string name="fill_all_necessary_fields">Fill all necessary fields</string>
     <string name="bld">bld.</string>
     <string name="apt">apt.</string>
+    <string name="error_try_again">Error. Try again later</string>
+    <string name="unknown_addressee">Unknown addressee</string>
+    <string name="question_mark" translatable="false">\?</string>
+    <string name="three_question_marks" translatable="false">\???</string>
+    <string name="six_question_marks" translatable="false">\??????</string>
 </resources>
