--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,7 +22,7 @@
     <string name="failed_to_get_forecast">Failed to get weather forecast</string>
     <string name="add_note">Add note</string>
     <string name="write_a_note">Write a note</string>
-    <string name="post_addresses">Post addresses</string>
+    <string name="post_addresses">Postal addresses</string>
     <string name="addressee_name">Addressee name</string>
     <string name="street">Street</string>
     <string name="building_number">Building number</string>
