--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -36,4 +36,5 @@
     <string name="apt">кв.</string>
     <string name="error_try_again">Ошибка повторите позже</string>
     <string name="unknown_addressee">Неизвестный адресат</string>
+    <string name="add_postal_addresses_and_send_letters">Добавьте почтовые адреса и шлите побольше писем и открыток!</string>
 </resources>
