--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,4 +39,5 @@
     <string name="question_mark" translatable="false">\?</string>
     <string name="three_question_marks" translatable="false">\???</string>
     <string name="six_question_marks" translatable="false">\??????</string>
+    <string name="add_postal_addresses_and_send_letters">Add postal addresses and send more letters and postcards!</string>
 </resources>
