Add/Edit post address screen: realized request permission to access contacts

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,4 +41,5 @@
     <string name="six_question_marks" translatable="false">\??????</string>
     <string name="add_postal_addresses_title">Add postal addresses\nand send more letters and postcards!</string>
     <string name="make_shopping_lists_title">Make shopping lists\nso you don\'t forget to buy anything</string>
+    <string name="requires_permission_to_access_contacts">Requires permission to access contacts</string>
 </resources>
