--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -39,4 +39,5 @@
     <string name="add_postal_addresses_title">Добавьте почтовые адреса\nи шлите побольше писем и открыток!</string>
     <string name="make_shopping_lists_title">Составляйте списки покупок,\nчтобы ничего не забыть</string>
     <string name="requires_permission_to_access_contacts">Необходимо разрешение на доступ к контактам</string>
+    <string name="failed_to_get_contact">Не удалось получить контакт</string>
 </resources>
