--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,4 +43,5 @@
     <string name="make_shopping_lists_title">Make shopping lists\nso you don\'t forget to buy anything</string>
     <string name="requires_permission_to_access_contacts">Requires permission to access contacts</string>
     <string name="failed_to_get_contact">Failed to get contact</string>
+    <string name="notes">Notes</string>
 </resources>
