--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -41,4 +41,5 @@
     <string name="requires_permission_to_access_contacts">Необходимо разрешение на доступ к контактам</string>
     <string name="failed_to_get_contact">Не удалось получить контакт</string>
     <string name="notes">Заметки</string>
+    <string name="no_notes_yet">Пока нет ни одной заметки</string>
 </resources>
