--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,6 +42,7 @@
     <string name="question_mark" translatable="false">\?</string>
     <string name="three_question_marks" translatable="false">\???</string>
     <string name="six_question_marks" translatable="false">\??????</string>
+    <string name="crete_to_do_lists_title">Create to-do lists\nso you don\'t forget anything</string>
     <string name="add_postal_addresses_title">Add postal addresses\nand send more letters and postcards!</string>
     <string name="make_shopping_lists_title">Make shopping lists\nso you don\'t forget to buy anything</string>
     <string name="requires_permission_to_access_contacts">Requires permission to access contacts</string>
