Post addresses screen: fixed list item layout

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,13 +35,10 @@
     <string name="edge_region_optional">Edge/Region</string>
     <string name="fields_marked_asterisk_required">Fields marked with <b>*</b> are required</string>
     <string name="fill_all_necessary_fields">Fill all necessary fields</string>
-    <string name="bld">bld.</string>
-    <string name="apt">apt.</string>
+    <string name="bld">Building</string>
+    <string name="apt">Apartment</string>
     <string name="error_try_again_later">Error. Try again later</string>
-    <string name="unknown_addressee">Unknown addressee</string>
     <string name="question_mark" translatable="false">\?</string>
-    <string name="three_question_marks" translatable="false">\???</string>
-    <string name="six_question_marks" translatable="false">\??????</string>
     <string name="crete_to_do_lists_title">Create to-do lists\nso you don\'t forget anything</string>
     <string name="add_postal_addresses_title">Add postal addresses\nand send more letters and postcards!</string>
     <string name="make_shopping_lists_title">Make shopping lists\nso you don\'t forget to buy anything</string>
