--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -51,4 +51,10 @@
     <string name="fields_empty_contact_will_be_deleted">Все поля пусты, контакт будет удален</string>
     <string name="display_section_shopping_list">Отображать раздел Список покупок</string>
     <string name="display_section_post_addresses">Отображать раздел Почтовые адреса</string>
+    <string name="calendar">Календарь</string>
+    <string name="main_screen">Главный экран</string>
+    <string name="clear_notes">Очистить заметки</string>
+    <string name="clear_to_do_lists">Очистить списки дел</string>
+    <string name="all_calendar_notes_will_be_cleared">Все заметки в календаре будут очищены</string>
+    <string name="all_to_do_lists_will_be_cleared">Все списки дел в календаре будут очищены</string>
 </resources>
