--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -54,7 +54,7 @@
     <string name="display_section_post_addresses">Display section Post addresses</string>
     <string name="calendar">Calendar</string>
     <string name="main_screen">Main screen</string>
-    <string name="clear_notes">Clear notes</string>
+    <string name="clear_notes_in_calendar">Clear calendar notes</string>
     <string name="clear_to_do_lists">Clear to-do lists</string>
     <string name="all_calendar_notes_will_be_cleared">All notes in the calendar will be cleared</string>
     <string name="all_to_do_lists_will_be_cleared">All to-do lists on the calendar will be cleared</string>
