--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -58,4 +58,5 @@
     <string name="clear_to_do_lists">Очистить списки дел</string>
     <string name="all_calendar_notes_will_be_cleared">Все заметки в календаре будут очищены</string>
     <string name="all_to_do_lists_will_be_cleared">Все списки дел в календаре будут очищены</string>
+    <string name="text_copied">Текст скопирован</string>
 </resources>
