--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -62,4 +62,5 @@
     <string name="all_to_do_lists_will_be_cleared">All to-do lists on the calendar will be cleared</string>
     <string name="text_copied">Text copied</string>
     <string name="memorable_dates">Memorable dates</string>
+    <string name="add_memorable_dates_title">Add memorable dates so you don\'t\nforget to congratulate anyone</string>
 </resources>
