--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -63,4 +63,5 @@
     <string name="memorable_dates">Памятные даты</string>
     <string name="add_memorable_dates_title">Добавляйте памятные даты,\nчтобы никого не забыть поздравить</string>
     <string name="today">сегодня</string>
+    <string name="what_happened_that_day">Что произошло в этот день?</string>
 </resources>
