--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -64,4 +64,5 @@
     <string name="memorable_dates">Memorable dates</string>
     <string name="add_memorable_dates_title">Add memorable dates so you don\'t\nforget to congratulate anyone</string>
     <string name="today">today</string>
+    <string name="what_happened_that_day">What happened that day?</string>
 </resources>
