--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -64,7 +64,6 @@
     <string name="memorable_dates">Memorable dates</string>
     <string name="add_memorable_dates_title">Add memorable dates so you don\'t\nforget to congratulate anyone</string>
     <string name="today">today</string>
-    <string name="what_happened_that_day">What happened that day?</string>
     <string name="january">January</string>
     <string name="february">February</string>
     <string name="march">March</string>
@@ -77,4 +76,7 @@
     <string name="october">October</string>
     <string name="november">November</string>
     <string name="december">December</string>
+    <string name="what_happened_that_day">What happened that day?</string>
+    <string name="year">Year</string>
+    <string name="year_is_optional">(year is optional)</string>
 </resources>
