--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -80,4 +80,6 @@
     <string name="what_happened_that_day">What happened that day?</string>
     <string name="year">Year</string>
     <string name="year_is_optional">(year is optional)</string>
+    <string name="event">Event</string>
+    <string name="note_or_to_do_list">Note or to-do list</string>
 </resources>
