Memorable dates screen: added information about age of event

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -81,4 +81,5 @@
     <string name="year_is_optional">(указывать год необязательно)</string>
     <string name="event">Событие</string>
     <string name="note_or_to_do_list">Заметка или список дел</string>
+    <string name="years_ago">лет назад: %d</string>
 </resources>
