Post addresses screen: realized confirmation of deletion of addresses

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -7,6 +7,7 @@
     <string name="clear_note_list_confirmation">Вы уверены, что хотите удалить все заметки?</string>
     <string name="clear_to_do_list_confirmation">Вы уверены, что хотите очистить список дел?</string>
     <string name="clear_post_addresses_confirmation">Вы уверены, что хотите удалить все почтовые адреса?</string>
+    <string name="delete_post_address_confirmation">Вы уверены, что хотите удалить этот адрес?</string>
     <string name="clear_memorable_dates_confirmation">Вы уверены, что хотите удалить все даты?</string>
     <string name="cancel">Закрыть</string>
     <string name="clear">Очистить</string>
