--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,7 @@
     <string name="clear_post_addresses_confirmation">Are you sure you want to delete all post addresses?</string>
     <string name="delete_post_address_confirmation">Are you sure you want to delete this address?</string>
     <string name="clear_memorable_dates_confirmation">Are you sure you want to delete all dates?</string>
+    <string name="delete_memorable_date_confirmation">Are you sure you want to delete this date?</string>
     <string name="cancel">Cancel</string>
     <string name="clear">Clear</string>
     <string name="delete">Delete</string>
