--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -56,7 +56,7 @@
     <string name="fields_empty_contact_will_be_deleted">Все поля пусты, контакт будет удален</string>
     <string name="display_section_shopping_list">Отображать раздел Список покупок</string>
     <string name="display_section_post_addresses">Отображать раздел Почтовые адреса</string>
-    <string name="display_section_memorable_dates">Display section Памятные даты</string>
+    <string name="display_section_memorable_dates">Отображать раздел Памятные даты</string>
     <string name="calendar">Календарь</string>
     <string name="main_screen">Главный экран</string>
     <string name="clear_notes_in_calendar">Очистить заметки в календаре</string>
