--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -6,6 +6,7 @@
     <string name="clear_shopping_list_confirmation">Вы уверены, что хотите очистить список покупок?</string>
     <string name="clear_note_list_confirmation">Вы уверены, что хотите удалить все заметки?</string>
     <string name="delete_note_confirmation">Вы уверены, что хотите удалить эту заметку?</string>
+    <string name="delete_menstruation_dates_confirmation">Вы уверены, что хотите удалить менструацию?</string>
     <string name="clear_to_do_list_confirmation">Вы уверены, что хотите очистить список дел?</string>
     <string name="clear_post_addresses_confirmation">Вы уверены, что хотите удалить все почтовые адреса?</string>
     <string name="delete_post_address_confirmation">Вы уверены, что хотите удалить этот адрес?</string>
