--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,7 @@
     <string name="clear_shopping_list_confirmation">Are you sure you want to clear your shopping list?</string>
     <string name="clear_note_list_confirmation">Are you sure you want to delete all notes?</string>
     <string name="delete_note_confirmation">Are you sure you want to delete this note?</string>
+    <string name="delete_menstruation_dates_confirmation">Are you sure you want to delete this menstruation?</string>
     <string name="clear_to_do_list_confirmation">Are you sure you want to clear to-do list?</string>
     <string name="clear_post_addresses_confirmation">Are you sure you want to delete all post addresses?</string>
     <string name="delete_post_address_confirmation">Are you sure you want to delete this address?</string>
