--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -94,6 +94,6 @@
     <string name="channel_to_remind_about_to_do_list">Channel to remind you about the to-do list for the current day</string>
     <string name="for_women">For women</string>
     <string name="select_time_interval">Select time interval</string>
-    <string name="add_menstruation_dates">Add menstruation dates</string>
     <string name="last_menstruation">Last menstruation:</string>
+    <string name="menses">Menses</string>
 </resources>
